CSS tweaks for the skills to make sure the text is readable

--- a/css/skills.css
+++ b/css/skills.css
@@ -15,6 +15,10 @@ This is because number of skills doesn't have a limit as users will make more (n
 	background-color: lightgray;
 }
 
+.skills_categories_list .default small{
+	color: white;
+}
+
 .skills_categories_list .green {
 	background-color: #95C11E;
 }
@@ -31,7 +35,6 @@ This is because number of skills doesn't have a limit as users will make more (n
 .skills_categories_list .purple small{
 	color: lightgray;
 }
-
 
 .skills_categories_list .purple:hover {
 	background-color: #333;
@@ -53,6 +56,10 @@ This is because number of skills doesn't have a limit as users will make more (n
 	background-color: #4859A4;
 }
 
+.skills_categories_list .blue small{
+	color: lightgray;
+}
+
 .skills_categories_list .blue:hover {
 	background-color: #333;
 }
@@ -71,7 +78,10 @@ This is because number of skills doesn't have a limit as users will make more (n
 
 .skills_categories_list .darkpp {
 	background-color: #3C2673;
-	
+}
+
+.skills_categories_list .darkpp small{
+	color: lightgray;
 }
 
 .skills_categories_list .darkpp:hover {
